# KNN-project

./: AlgorithmSettingsCommand.cpp  CMakeLists.txt  README.md  SocketIO.cpp  client.cpp  confusionMatrixCommand.cpp  downloadResCommand.hpp  main.cpp  tcpServer.cpp
resources/: soccer_test.csv  soccer_train.csv
src/: CLI.cpp  ClassifyCommand.cpp  ServerDataManagement.cpp  ServerDataManagement.hpp  StandartIO.cpp  UploadCommand.cpp  displayResCommand.cpp  downloadResCommand.cpp  exitCommand.cpp
